WIP Single page website

--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
       </div>
     </header>
     <section id="topSection">
-        
+      <div class="container">
+        <div class="content">
+          <h1>Lorem ipsum dolor sit</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+            obcaecati eum illum doloremque assumenda repellat laborum quia enim
+            vitae aspernatur, cum explicabo eveniet similique quae possimus
+            aliquam sed repellendus quas.
+          </p>
+        </div>
+      </div>
     </section>
     <footer>
       <nav>
@@ -54,7 +64,7 @@
           </li>
         </ul>
       </nav>
-      <p>Copyright ©️ 2017 Ewebforyou</p>
+      <p>copyright ©️ 2017 ewebforyou</p>
     </footer>
     <script src="/assets/js/main.js" defer></script>
   </body>
