--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
       referrerpolicy="no-referrer"
       defer
     ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7LB0E2T679"
+      defer
+    ></script>
+    <script defer>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-7LB0E2T679");
+    </script>
   </head>
   <body>
     <header>
