--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <title>Full stack web & mobile application development | ewebforyou</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"
@@ -38,7 +37,12 @@
                 media="(max-width: 500px)"
                 srcset="/assets/images/icon.png"
               />
-              <img src="/assets/images/logo.png" alt="ewebforyou" />
+              <img
+                src="/assets/images/logo.png"
+                width="40"
+                height="40"
+                alt="ewebforyou"
+              />
             </picture>
           </a>
         </div>
