--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Privacy Policy for Xwally</title>
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./main.css" />
     <meta name="robots" content="noindex" />
   </head>
